--- a/examples/config_flags.h.in
+++ b/examples/config_flags.h.in
@@ -13,7 +13,7 @@ MSP 14 Jan 2022 set yaml flag
 
 // eigen compilation
 #ifndef HAVEEIGEN
-#define HAVEEIGEN 1
+#define HAVEEIGEN 0
 #endif
 
 // yaml compilation
@@ -23,27 +23,42 @@ MSP 14 Jan 2022 set yaml flag
 
 // flags for options in different headers
 
+// use splines in orient files (orient.h)
+#ifndef SPLINEORIENT
+#define SPLINEORIENT 0
+#endif
+
+// use splines in coefficient files (sphcoefs.h)
+#ifndef SPLINECOEFS
+#define SPLINECOEFS 0
+#endif
+
+// use splines in model files (sphmodel)
+#ifndef SPLINEMODEL
+#define SPLINEMODEL 1
+#endif
+
 // additional diagnostic output in coefficient files (sphcoefs, cylcoefs)
 #ifndef DEBUGCOEFS
-#define DEBUGCOEFS 1
+#define DEBUGCOEFS 0
 #endif
 
 // flags for deep debugging (expansion.h)
 #ifndef DEEPDEBUGCOEFS
-#define DEEPDEBUGCOEFS 1
+#define DEEPDEBUGCOEFS 0
 #endif
 
 #ifndef DEEPDEBUGTIME
-#define DEEPDEBUGTIME 1
+#define DEEPDEBUGTIME 0
 #endif
 
 // diagnostics for debugging cylexpansion.h
 #ifndef FORMAT
-#define FORMAT 1
+#define FORMAT 0
 #endif
 
 #ifndef ORDERS
-#define ORDERS 1
+#define ORDERS 0
 #endif
 
 
