--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,8 +2,8 @@
 add_compile_definitions(HAVEEIGEN=${HAVEEIGEN})
 
 
-#set(bin_PROGRAMS eigentest fullintegrate extractcoefs densitymap rotcurve)
-set(bin_PROGRAMS fullintegrate extractcoefs densitymap rotcurve)
+set(bin_PROGRAMS eigentest rotcurve)
+#set(bin_PROGRAMS fullintegrate extractcoefs densitymap rotcurve)
 
 
 
@@ -16,14 +16,19 @@ set(common_INCLUDE $<INSTALL_INTERFACE:include>
   ${CMAKE_CURRENT_SOURCE_DIR}/.. ${EIGEN3_INCLUDE_DIR}
   ${Boost_INCLUDE_DIRS})
 
-
-#add_executable(eigentest      eigentest.cc    )
-add_executable(fullintegrate  fullintegrate.cc)
-add_executable(extractcoefs   extractcoefs.cc )
-add_executable(densitymap     density_map.cc  )
+add_executable(eigentest      eigentest.cc    )
+#add_executable(fullintegrate  fullintegrate.cc)
+#add_executable(extractcoefs   extractcoefs.cc )
+#add_executable(densitymap     density_map.cc  )
 add_executable(rotcurve       rotcurve.cc     )
 
 #target_compile_definitions(eigentest PRIVATE HAVEEIGEN=1)
+
+pybind11_add_module(mwlmc mwlmc.cc)
+
+# EXAMPLE_VERSION_INFO is defined by setup.py and passed into the C++ code as a
+# define (VERSION_INFO) here.
+#target_compile_definitions(cmake_example PRIVATE VERSION_INFO=${EXAMPLE_VERSION_INFO})
 
 
 foreach(program ${bin_PROGRAMS})
