--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "extern/pybind11"]
-	path = extern/pybind11
-	url = ../../pybind/pybind11
-	branch = stable
+[submodule "pybind11"]
+    path = pybind11
+    url = https://github.com/pybind/pybind11.git
