--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "pybind11"]
-    path = pybind11
-    url = https://github.com/pybind/pybind11.git
+[submodule "extern/pybind11-2.9.2"]
+	path = extern/pybind11-2.9.2
+	url = https://github.com/pybind/pybind11.git
