--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,8 +26,13 @@ set(CMAKE_OSX_ARCHITECTURES "x86_64")
 option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
 
 # required compiler features
-find_package(pybind11)
+#find_package(pybind11)
+
 find_package(Eigen3 REQUIRED)
+
+set(MY_PYBIND ${MY_CURR}/extern/pybind11-2.9.2)
+
+add_subdirectory(${MY_PYBIND})
 
 if(pybind11_FOUND)
   set(HAVEPYBIND11 TRUE)
