--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,9 +1,9 @@
 
-set(common_LINKLIB ${EIGEN3_LIBRARIES})
+#set(common_LINKLIB ${EIGEN3_LIBRARIES})
 
 # is this the best way to do this?
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
+#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
 
-if(HAVEPYBIND11)
-  pybind11_add_module(mwlmc mwlmc.cc )
-endif()
+#if(HAVEPYBIND11)
+ # pybind11_add_module(mwlmc mwlmc.cc )
+#endif()
