--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ if(Eigen3_FOUND)
   include_directories( ${EIGEN3_INCLUDE_DIRS} )
 endif()
 
-add_subdirectory(src)
+# add_subdirectory(src)
 # add_subdirectory(examples)
 
 set(common_LINKLIB ${EIGEN3_LIBRARIES})
@@ -53,4 +53,3 @@ include_directories(include)
 if(HAVEPYBIND11)
   pybind11_add_module(mwlmc src/mwlmc.cc )
 endif()
-
