--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,9 @@ set(CMAKE_OSX_ARCHITECTURES "x86_64")
 option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
 
 # required compiler features
-find_package(pybind11)
-find_package(Eigen3)
-find_package(yaml-cpp)
+find_package(Eigen3 REQUIRED)
+add_subdirectory(extern/pybind11)
+
 
 if(pybind11_FOUND)
   set(HAVEPYBIND11 TRUE)
