--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = mwlmc
 author = Sophia Lilleengen and Michael S. Petersen
-author_email = s.lilleengen@surrey.ac.uk
+author_email = sophia.lilleengen@durham.ac.uk
 description = Milky Way - LMC simulations
 long_description = file: README.md
 long_description_content_type = "text/markdown"
